En la ratonera ha caido un ratón
ABER, ya jala el pedo este de que se suba a la nube. El cliente le manda la petición al servidor para gestionar (obtener, subir y descargar) los archivos entre el server y el almacenamiento de firebase. La interfaz del modal de archivos ya muestra una lista dinámica entre los tres posibles estados de un archivo (local, firebase, local y firebase) y funciona el botón de subir y descargar. aún falta arreglar algunos bugs como la eliminación de los archivos en la nube, y entre otros. Guenas noches c:

--- a/interface/web/src/index.html
+++ b/interface/web/src/index.html
@@ -12,6 +12,7 @@
   <script src="./assets/lib/popper.min.js"></script>
   <script src="./assets/lib/bootstrap.min.js"></script>
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
